2005-11-19 08:47  PeterB

	* src/balsa-index.c: don't scroll back to current message after
	mailbox changes.
	* src/sendmsg-window.c: create Face or X-Face user header from path
	in identity.
	* src/balsa-message.c: display face from Face or X-Face header.
	* libbalsa/send.c: use user-headers correctly.
	* libbalsa/: misc.c, misc.h: new public methods
	libbalsa_get_image_from_{,x_}face_header and a corresponding GError
	domain.
	* libbalsa/: identity.c, identity.h: port signature-path to
	GtkFileChooserButton; add Face and X-Face header file paths; change
	some prototypes to reduce dynamic casting.
	* configure.in: new configure option --with-compface=no.
	* acinclude.m4: stop some autotool whining.

2005-11-09 19:11  PeterB

	* libbalsa/: mailbox.c, mailbox.h, mailbox_imap.c,
	mailbox_maildir.c, mailbox_mbox.c, mailbox_mh.c, mailbox_pop3.c,
	message.c, message.h, send.c: change LibBalsaMailbox add-message
	method to take a GMimeStream and LibBalsaMessageFlag instead of a
	message; move libbalsa_mailbox_copy_message to message.c and rename
	libbalsa_message_copy; use new add-message method in mailbox-pop3.

2005-11-06 21:15 Pawel Salek

	* libbalsa/mailbox_pop3.c: use Mh temporary mailbox until an
	add_message_from_stream() method is implemented.

2005-11-06 13:42  PeterB

	* libbalsa/mailbox_mh.c: implement load-config method; use
	g_mkstemp to make temporary files; sync mailbox even if
	.mh_sequences doesn't exist.
	* libbalsa/mailbox_pop3.c: use g_file_open_tmp to open the temp
	file.

2005-11-06 Pawel Salek

	* libbalsa/mailbox_pop3.c: last commit broke direct Pop delivery -
	fix it.
	* src/sendmsg-window.c: fix compilation without GtkSpell.
	* Makefile.am: make variables must start in the first column.

2005-11-05 17:15  PeterB

	* src/Makefile.am: define balsa_gtkspell_extra_dist before using
	it.
	* configure.in, src/Makefile.am, src/sendmsg-window.c,
	src/sendmsg-window.h, src/toolbar-factory.c: new configure option
	--with-gtkspell, default = no.